<resources>
    <string name="app_name">lab4</string>
    <string name="navigation_button_profile_text">Профиль</string>
    <string name="navigation_button_holidays_text">Праздники</string>
    <string name="navigation_button_events_text">События</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="date">DATE</string>

    <string name="settingsLabel">Settings</string>
    <string name="share_friends">Share friends</string>
    <string name="about">About</string>
    <string name="aboutLabel">About</string>

    <string name="shareFriends">Share friends</string>
    <string name="shareDescription">Great app!!!</string>
    <string name="input_name_event">Название события:</string>
    <string name="input_descr_event">Описание:</string>
    <string name="input_date_event">Дата:</string>
    <string name="choose_date_button">Выбрать дату</string>
    <string name="input_time_event">Время:</string>
    <string name="choose_time_event">Выбрать время</string>
    <string name="add_event_button">Сохранить</string>
    <string name="edit">edit</string>
    <string name="remove">remiove</string>

</resources>